# OpenNeuro

./: .gitignore  LICENSE  README.md  package.json
backend/: pyproject.toml
backend/config/: chat_config.json
backend/src/: main.py  metrics.py  pipeline.py  server.py
backend/src/api/: dep.py
backend/src/api/component/: controller.py  service.py
backend/src/api/component/dto/: __init__.py  component.py
backend/src/api/graph/: controller.py  service.py
backend/src/api/graph/domain/: graph.py
backend/src/api/graph/dto/: __init__.py  edge.py  node.py
backend/src/api/metrics/: controller.py  service.py
backend/src/api/metrics/dto/: __init__.py  metrics.py
backend/src/api/video/: controller.py
backend/src/core/: __init__.py  base.py  channel.py  component.py  config.py  frames.py  graph.py  node.py  stream.py  topic.py  utils.py
backend/src/core/component/: __init__.py  asr.py  llm.py  tts.py  vad.py
backend/src/core/conduit/: __init__.py  agent_state.py  asr.py  discord.py  llm.py  sts.py  tts.py  vad.py
backend/src/core/sink/: __init__.py  speaker.py  video_stream.py
backend/src/core/source/: __init__.py  mic.py  microphone.py  video_player.py  vrchat.py
backend/src/openneuro/: __init__.py  config.py
backend/src/openneuro/api/: dep.py
backend/src/openneuro/api/component/: controller.py  service.py
backend/src/openneuro/api/frames/: controller.py  service.py
backend/src/openneuro/api/graph/: controller.py  service.py
backend/src/openneuro/api/metrics/: controller.py  service.py
backend/src/openneuro/core/: __init__.py  component.py  frames.py
backend/src/openneuro/core/conduit/: __init__.py  asr.py  (+6 more)
backend/src/openneuro/core_old/: __init__.py  channel.py  component.py
(+47 files in other folders)
