[project]
name = "openneuro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.81.8",
    "mypy>=1.19.1",
    "numpy>=2.4.2",
    "onnxruntime>=1.24.1",
    "requests>=2.32.5",
    "torch>=2.10.0",
    "transformers>=5.1.0",
    "types-requests>=2.32.4.20260107",
]
