[project]
name = "openneuro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "litellm>=1.81.8",
    "mypy>=1.19.1",
    "numpy>=2.4.2",
    "onnxruntime>=1.24.1",
    "openai>=2.17.0",
    "python-dotenv>=1.2.1",
    "sounddevice>=0.5.5",
    "sse-starlette>=3.2.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "transformers>=5.1.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=16.0",
]
